fall23-tianling0625/project/.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/twang0/project:2a587e5
          resources:
            requests:
              cpu: 500m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 5000Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
